EFK/kibana/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
spec:
  selector: 
    app: kibana
  type: ClusterIP 
  ports:
    - port: 8080
      targetPort: 5601
